--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,7 @@ a:link, a:visited, a:hover {color:black;}
     text-align: center; margin-top:30vh;
     letter-spacing: -1px; font-weight: 100;
     font-family: 'Ma Shan Zheng', cursive;
+    margin-left:auto;
 }
 
 #searchbtn { 
@@ -57,6 +58,17 @@ a:link, a:visited, a:hover {color:black;}
     width: 30px;
     height: 30px;
     z-index: 99;
+}
+
+.login {
+    position: fixed;
+    bottom: 140px;
+    right: 20px;
+    width: 30px;
+    height: 30px;
+    z-index: 101;
+    background-color: white;
+    border-radius: 4px;
 }
 
 #searchbtn a { text-decoration: none;}
@@ -239,7 +251,8 @@ nav ul li {list-style: none;}
     }
     #main {height:88vh;}
     #main h2 {
-        font-size: 5em;letter-spacing: 2px;
+        font-size: 5em; letter-spacing: 2px;
+        margin-left: -10px;
     }
     #searchbtn {
         display: block;
