--- a/css/styles.css
+++ b/css/styles.css
@@ -6,12 +6,6 @@
     padding: 0;
 }
 
-body {
-    display: grid;
-    font-size:20px;
-    background-color: #fefefe;
-}
-
 #logo {
     position: absolute;
     top:80px;
@@ -24,16 +18,19 @@ a:link, a:visited, a:hover {color:black;}
 
 #main{
     width: 100%;
-    height: 98vh;
+    height: 100vh;
     background: #3586ff;
     overflow: hidden;
     z-index: 100;
 }
 
-#main h2{
-    color: white; font-size:9em;
-    text-align: center; margin-top:30vh;
-    letter-spacing: -1px; font-weight: 100;
+section h1{
+    color: white; 
+    font-size:8em;
+    text-align: center; 
+    margin-top:30vh;
+    letter-spacing: -1px; 
+    font-weight: 100;
     font-family: 'Ma Shan Zheng', cursive;
     margin-left:auto;
 }
@@ -43,13 +40,15 @@ a:link, a:visited, a:hover {color:black;}
     border: white solid 0px;
     border-radius: 5px;
     padding:10px;
-    margin-left:50vw;
+    margin-left:48vw;
     font-weight: 500;
     font-size: 20px;
-    width: 200px;
+    width: 180px;
     font-family: 'Poppins', sans-serif;
     cursor:pointer;
 }
+
+#searchbtn a { text-decoration: none;}
 
 .up-icon {
     position: fixed;
@@ -60,31 +59,9 @@ a:link, a:visited, a:hover {color:black;}
     z-index: 99;
 }
 
-.login {
-    position: fixed;
-    bottom: 140px;
-    right: 20px;
-    width: 30px;
-    height: 30px;
-    z-index: 101;
-    background-color: white;
-    border-radius: 4px;
-}
-
-#searchbtn a { text-decoration: none;}
-
-
-
-.section-top{
-    margin-top:40px;
-}
-
-.section-head-hide {display: none;}
-
 section .wave {
     position: absolute;
     bottom: 0;
-    left: 0;
     width: 100%;
     height: 100px;
     background-image: url('/img/wave.png');
@@ -144,92 +121,89 @@ section .wave.wave3 {
     }
 }
 
+/* Section 2 Starts from here */
 
-input[type=text].search {
-    width: 90px;
-    box-sizing: border-box;
-    border: 2px solid #ccc;
-    border-radius: 4px;
-    font-size: 16px;
-    background-color: white;
-    background-position: 10px 10px; 
-    background-repeat: no-repeat;
-    padding: 12px 20px 12px 10px;
-    transition: width 0.4s ease-in-out;
-    margin: 15px 0 15px 1%;
-}
-
-input[type=text].search:focus {
-    width: 60%;
-}
-
-.grid-container {
-    display: grid;
-    grid-template-columns: 1fr 2fr 2fr 2fr 1fr;
-    padding: 50px;
-}
-
-.grid-item {
-    background-color: rgba(255, 255, 255, 0.8);
-    padding: 20px;
-    font-size: 30px;
-    text-align: center;
-}
-
-#searchBy {
-    margin-top: 150px;
-}
-
-section h2{
-    margin-left: 10%;
+section > h2 {
     font-size: 32px;
     font-family: 'Poppins', sans-serif;
 }
 
-.hr-head {
-    width: 80%;
-    margin:auto;
-    margin-bottom: 5px;
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    padding-top:50px;
+    grid-gap: 20px;
+    grid-auto-rows: auto;
 }
 
-.searchby-img{
-    height: 200px;
-    max-width: 280px;
-}
-
-.searchby-item-title{
-    display: block;
-    margin-top: 10px;
-    font-family: 'Poppins', sans-serif;
+.item{
+    place-self: center;
+    padding: 20px 10px;
 }
 
 .item:hover {
-    border: 4px solid #3586ff;
+    background-color: lightgoldenrodyellow;
     border-radius: 4px;
 }
 
-/*------------- Footer Navigation -------------*/
+.grid-title {
+    grid-area: 1 / 2 / span 1 / span 3;
+    font-family: 'Poppins', sans-serif;
+    border-bottom: 2px solid black;
+    border-bottom-left-radius: 6px;
+}
 
-nav {background: #3586ff;}
+.grid-item1 {
+    grid-area: 2 / 2 / span 1 / span 1;
+}
+.grid-item2 {
+    grid-area: 2 / 3 / span 1 / span 1;
+}
+.grid-item3 {
+    grid-area: 2 / 4 / span 1 / span 1;
+}
 
-nav ul li {list-style: none;}
+.grid-itme-img{
+    height: 180px;
+    max-width: 200px;
+}
+
+.item-title{
+    margin-top: 10px;
+    font-size: 26px;
+    letter-spacing: 1px;
+    text-align: center;
+    font-family: 'Poppins', sans-serif;
+}
+
+/* Footer starts from here */
+
+footer nav{
+    margin-top: 40px;
+    background-color: #3586ff;
+}
+
+nav ul li {
+    list-style: none;
+}
 
 .container {
     display: flex;
-    justify-content: space-around;
     padding-top: 20px;
     padding-bottom: 20px;
+    flex-wrap: nowrap;
+    justify-content: center;
 }
 
+.links {
+    flex: 1;
+    margin-left: 5px;
+}
 
-.container li.devs{
+.info {
     flex: 3;
-    text-align: center;
-}
-
-.container li.devs strong{
     color: white;
-    font-size: 22px;
+    font-size: 20px;
     border-top-color: white;
 }
 
@@ -238,39 +212,64 @@ nav ul li {list-style: none;}
     height: 40px;
 }
 
-.placeholder-img {
-    margin: 10px 0px 20px 0px;
-    width:300px; height: 100px;
-}
-
-@media only screen and (max-width: 600px) {
-    #logo {
-        margin-left: 33%;
-        width:130px;
-        height: 100px;
+@media(max-width:725px)
+{
+    .grid-container{
+        display: grid;
+        grid-template-columns: 10px 1fr 10px;
     }
-    #main {height:88vh;}
-    #main h2 {
-        font-size: 4em; letter-spacing: 2px;
+    .grid-title, .item{
+        padding: 20px 0px;
+    }
+    .grid-item1 {
+        grid-area: 2 / 2 / span 1 / span 1;
+    }
+    .grid-item2 {
+        grid-area: 3 / 2 / span 1 / span 1;
+    }
+    .grid-item3 {
+        grid-area: 4 / 2 / span 1 / span 1;
+    }
+    #logo {
+        position: absolute;
+        top:90px;
+        margin-left:42%;
+        width: 160px;
+        height:120px;
+    }
+    section h1 {
+        font-size: 6em; letter-spacing: 2px;
         margin-left: -10px;
     }
+}
+
+@media(max-width:425px)
+{
+    .grid-container{
+        display: grid;
+        grid-template-columns: 10px 1fr 10px;
+    }
+    .grid-item1 {
+        grid-area: 2 / 2 / span 1 / span 1;
+    }
+    .grid-item2 {
+        grid-area: 3 / 2 / span 1 / span 1;
+    }
+    .grid-item3 {
+        grid-area: 4 / 2 / span 1 / span 1;
+    }
+    #logo {
+        position: absolute;
+        top:90px;
+        margin-left:42%;
+        width: 160px;
+        height:120px;
+    }
     #searchbtn {
-        display: block;
-        margin:auto;
-        margin-top: 20px;
+        margin-left:40px;
     }
-    .grid-container {
-        display: block;
-        grid-template-columns: '2fr 2fr 2fr';
-        padding:5px;
-    }
-    section h2 {font-size: 20px;}
-    .searchby-img{ height: 140px; max-width: 220px;}
-    .container li.devs{font-size: 18px;}
-    .container li.devs strong{
-        font-size: 22px; font-family: 'Poppins', sans-serif;
-    }
-    .placeholder-img {
-        margin: 0px 0px 20px 0px;
+    section h1 {
+        font-size: 6em; letter-spacing: 2px;
+        margin-left: -10px;
     }
 }
