--- a/css/login-signup.css
+++ b/css/login-signup.css
@@ -2,22 +2,21 @@
 
 body {
     margin: 0;
-    padding: 0;
 }
 
-canvas{
+/*canvas{
     position: absolute;
     top:0;
     left: 0;
     z-index: 0;
-}
+}*/
 
 h2 a{
     text-decoration:none;
     color:white;
     background-color: #3586ff;
     border-radius: 5px;
-    padding:10px;
+    padding:20px;
     z-index: 1;
 }
 
@@ -28,16 +27,7 @@ h2 a{
     grid-template-columns: 50% auto;
     grid-template-rows: 100%;
     grid-template-areas: 
-    "left   right"
-}
-
-.top-left-home-icon {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    width: 25px;
-    height: 25px;
-    border-radius: 4px;
+    "left right"
 }
 
 section.left {
@@ -48,10 +38,11 @@ section.left {
 }
 
 section.left h2 {
-    font-size:6em;
+    font-size: 6em;
     position: relative;
-    top:250px;
+    top: 250px;
     text-align: center;
+    font-weight: 100;
     letter-spacing: 2px;
 }
 
@@ -104,10 +95,10 @@ li.logo .name {
 }
 
 .box-container input:focus {
-    border:2px solid red;
+    border:2px solid #3586ff;
 }
 
-.link-text { position: relative; left: 80px; top: 25px;}
+.link-text { position: relative; left: 15%; top: 25px;}
 
 input[type="submit"] {
     width:100px;
@@ -116,7 +107,7 @@ input[type="submit"] {
     color: white;
     font-size:20px;
     position: relative;
-    left: 140px;
+    left: 25%;
     top:-30px;
     font-family: 'Poppins',sans-serif;
     border-top-right-radius: 15px;
@@ -154,9 +145,9 @@ input[type="submit"]:hover {
     .logo {
         position: relative;
         top: 10px;
-        left: 300px;
-        height: 100px;
-        width: 120px;
+        left: 35%;
+        height: 150px;
+        width: 170px;
     }
 
     .link-text { position: relative; left: 110px; top: 0px; font-size: 22px;}
@@ -192,7 +183,7 @@ input[type="submit"]:hover {
     .box-container input { padding: 6px; font-size: 22px; height: 30px;}
 
     /*.logo {position: relative; top: 20px; left: 210px;}*/
-    .logo {position: relative; top: 10px; left: 40%; right: 70%;}
+    /*.logo {position: relative; top: 10px; left: 40%; right: 70%;}*/
 
     .link-text { position: relative; left: 80px; top: 0px;}
     
@@ -216,12 +207,19 @@ input[type="submit"]:hover {
 
     #loginForm, #regForm {margin-top: 40px;}
 
-    #loginSection {margin: 30% 0px 0px 20px;}
+    #loginSection {margin: 40% 0px 0px 20px;}
     #regSection {margin: 120px 0px 0px 20px;}
 
     .box-container input { padding: 5px; font-size: 14px; height: 20px;}
     
-    .logo {position: relative; top: 10px; left: 30%; right: 25%;}
+    .logo {
+        position: relative; 
+        top: 10px; 
+        left: 30%; 
+        right: 25%;
+        width: 90px;
+        height: 90px;
+    }
     
     .link-text { position: relative; left: 40px; top: 0px; font-size: 14px;}
     
