--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,16 @@
     padding: 0;
 }
 
+#main{
+    display: grid;
+    grid-template-columns: repeat(11, 1fr);
+    grid-template-rows: repeat(12, 1fr);
+    height: 95vh;
+    background: #3586ff;
+    overflow: hidden;
+    z-index: 100;
+}
+
 .login-icon {
     position: fixed;
     right: 10px;
@@ -16,21 +26,50 @@
     border-radius: 5px;
 }
 
-.go-up-icon {
-    position: fixed;
-    right: 10px;
-    bottom: 110px;
-    height: 30px;
-    width: 30px;
-    background-color: white;
+a:link, a:visited, a:hover {color:black;}
+
+#acetateDisc {
+    grid-column: 6 / 7;
+    grid-row: 3 / 4;
     border-radius: 5px;
-    z-index: -1;
+    width: 100px;
+    height:100px;
 }
 
-canvas, #logo {
+section h1{
+    grid-column: 4 / 9;
+    grid-row: 4 / 5;
+    color: white; 
+    font-size:7em;
+    text-align: center; 
+    letter-spacing: -1px; 
+    font-weight: 100;
+    font-family: 'Ma Shan Zheng', cursive;
+}
+
+#searchbtn { 
+    grid-column: 7 / 9;
+    grid-row: 5 / 6;
+    background: white;
+    border: white solid 0px;
+    border-radius: 5px;
+    font-weight: 500;
+    padding: 10px;
+    font-size: 20px;
+    height: 30px;
+    text-decoration: none;
+    text-align: center;
+    width: 170px;
+    font-family: 'Poppins', sans-serif;
+    cursor:pointer;
+}
+
+/*
+#acetateDisc {
     position: absolute;
     top:15%;
     margin-left:47%;
+    border-radius: 5px;
     width: 100px;
     height:100px;
 }
@@ -69,15 +108,7 @@ section h1{
 }
 
 #searchbtn a { text-decoration: none;}
-
-.up-icon {
-    position: fixed;
-    bottom: 100px;
-    right: 20px;
-    width: 30px;
-    height: 30px;
-    z-index: 99;
-}
+*/
 
 section .wave {
     position: absolute;
@@ -141,6 +172,8 @@ section .wave.wave3 {
     }
 }
 
+
+*/
 /* Section 2 Starts from here */
 
 section > h2 {
@@ -230,28 +263,31 @@ footer {
     border-radius:4px;
 }
 
-@media(max-width:1024px){
+@media(max-width:1024px) {
     #main {
         height: 92vh;
+        grid-gap: 20px;
     }
-    canvas, #logo {
-        position: absolute;
-        top: 15%;
-        left: 5%;
-        margin-left:40%;
+    #acetateDisc {
+        grid-column: 6 / 7;
+        grid-row: 2 / 3;
+        margin-left: 15%;
+        border-radius: 5px;
         width: 100px;
         height:100px;
     }
     section h1 {
-        position: relative;
-        top: 0%;
+        grid-row: 3 / 4;
         font-size: 6em; 
         letter-spacing: 2px;
         text-align: center;
     }
-    #searchbtn {
-        position: relative;
-        top:0px;
+    #searchbtn { 
+        grid-column: 6 / 7;
+        grid-row: 4 / 5;
+        font-size: 20px;
+        height: 30px;
+        width: 150px;
     }
     footer {
         height: 100px;
@@ -276,23 +312,6 @@ footer {
     .grid-item3 {
         grid-area: 4 / 2 / span 1 / span 1;
     }
-    
-    canvas, #logo {
-        position: absolute;
-        top: 15%;
-        left: 5%;
-        margin-left:40%;
-        width: 100px;
-        height:100px;
-    }    
-    section h1 {
-        position: relative;
-        top:10px;
-    }
-    #searchbtn {
-        position: relative;
-        top:10px;
-    }
     .flex-item {
         font-size: 18px;
     }
@@ -306,21 +325,20 @@ footer {
 {
     #main {
         height:88vh;
+        grid-template-columns: repeat(5, 1fr);
     }
-    canvas, #logo {
-        position: absolute;
-        top: 15%;
-        left: 4%;
-        margin-left:35%;
-        width: 80px;
-        height:80px;
+    #acetateDisc {
+        grid-column: 3 / 4;
+        grid-row: 3 / 4;
     }
     section h1 {
         font-size: 4rem;
+        grid-column: 2 / 5;
+        grid-row: 4 / 5;
     }
     #searchbtn {
-        top: 30px;
-        left: -80px;
+        grid-column: 3 / 4;
+        grid-row: 5 / 6;
     }
 
     section .wave {
